--- a/style.css
+++ b/style.css
@@ -7,12 +7,18 @@ body {
 h1 {
   text-align: center;
   font-size: 4rem;
-  -webkit-text-stroke: 2px black;
+  -webkit-text-stroke: 3px black;
   text-stroke: 2px black;
 }
 
 h2 {
   font-size: 2rem;
+}
+
+.timer > h1 {
+  font-size: 6rem;
+  -webkit-text-stroke: 3px black;
+  text-stroke: 3px black;
 }
 
 img {
@@ -21,23 +27,36 @@ img {
 }
 
 .container {
-  width: 50%;
-  height: 50%;
+  width: 80%;
+  height: 60%;
   position: absolute;
-  top: 25%;
-  left: 25%;
+  top: 20%;
+  left: 10%;
   display: grid;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  align-items: center;
 }
 
 .timer {
-  margin-top: 10rem;
   text-align: center;
 }
 
 .timer-controls {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 10%;
+  grid-template-rows: 10px;
+  gap: 5%;
   justify-items: center
+}
+
+button {
+  display: inline-block;
+  padding: 12px;
+  background-color: #555;
+  color: white;
+  margin: auto auto;
+  width: 10rem;
+  font-size: 1rem;
+  font-family: monospace;
+  border-radius: 12px;
 }
