--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ h2 {
 }
 
 .timer > h1 {
-  font-size: 6rem;
+  font-size: 10rem;
   -webkit-text-stroke: 3px black;
   text-stroke: 3px black;
 }
@@ -26,11 +26,24 @@ img {
   width: auto;
 }
 
+.quote {
+  height: 200px;
+  background-color: #222;
+  border-radius: 32px;
+  width: 75%;
+  margin: 0 auto;
+  display: hidden;
+}
+
+.hide {
+  visibility: hidden;
+}
+
 .container {
   width: 80%;
-  height: 60%;
+  height: 75%;
   position: absolute;
-  top: 20%;
+  top: 10%;
   left: 10%;
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
@@ -42,18 +55,20 @@ img {
 }
 
 .timer-controls {
+  width: 75%;
+  margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 10px;
-  gap: 5%;
-  justify-items: center
+  justify-items: center;
+  gap: 12px;
 }
 
 button {
   display: inline-block;
   padding: 12px;
-  background-color: #555;
-  color: white;
+  background-color: transparent;
+  border: 2px solid #222;
+  color: #222;
   margin: auto auto;
   width: 10rem;
   font-size: 1rem;
